fix mentor image stretching

--- a/_sass/mentors.scss
+++ b/_sass/mentors.scss
@@ -67,6 +67,7 @@
       .photo-container {
         img {
           max-height : 75vh;
+          max-width : 75vh;
         }
       }
     }
